--- a/mirrorui/mirrorui.csproj
+++ b/mirrorui/mirrorui.csproj
@@ -42,6 +42,7 @@
     <Content Include="doc\cachepagedemo1.html" />
     <Content Include="doc\cssicon\about.html" />
     <Content Include="doc\cssicon\minus.html" />
+    <Content Include="doc\cssicon\menu.html" />
     <Content Include="doc\cssicon\plus.html" />
     <Content Include="doc\cssicon\triarr.html" />
     <Content Include="doc\cssicon\star5.html" />
@@ -138,6 +139,8 @@
     <None Include="stylus\coms\msgbox.styl" />
     <None Include="stylus\coms\msgpanel.styl" />
     <None Include="stylus\coms\mnavmenu.styl" />
+    <None Include="stylus\cssicon\icons\menu.styl" />
+    <None Include="stylus\cssicon\icons\minus.styl" />
     <None Include="stylus\cssicon\icons\plus.styl" />
     <None Include="stylus\cssicon\icons\triarr.styl" />
     <None Include="stylus\cssicon\icons\star5.styl" />
