--- a/mirrorui/mirrorui.csproj
+++ b/mirrorui/mirrorui.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Content Include="404.html" />
     <Content Include="doc\cachepagedemo1.html" />
+    <Content Include="doc\cssicon\search.html" />
     <Content Include="doc\cssicon\about.html" />
     <Content Include="doc\cssicon\minus.html" />
     <Content Include="doc\cssicon\menu.html" />
@@ -140,6 +141,7 @@
     <None Include="stylus\coms\msgbox.styl" />
     <None Include="stylus\coms\msgpanel.styl" />
     <None Include="stylus\coms\mnavmenu.styl" />
+    <None Include="stylus\cssicon\icons\search.styl" />
     <None Include="stylus\cssicon\icons\menu.styl" />
     <None Include="stylus\cssicon\icons\minus.styl" />
     <None Include="stylus\cssicon\icons\plus.styl" />
