--- a/mirrorui/mirrorui.csproj
+++ b/mirrorui/mirrorui.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Content Include="404.html" />
     <Content Include="doc\cachepagedemo1.html" />
+    <Content Include="doc\cssicon\bookmark.html" />
     <Content Include="doc\cssicon\info.html" />
     <Content Include="doc\cssicon\disabled.html" />
     <Content Include="doc\cssicon\search.html" />
@@ -144,6 +145,7 @@
     <None Include="stylus\coms\msgpanel.styl" />
     <None Include="stylus\coms\mnavmenu.styl" />
     <None Include="stylus\cssicon\icons\disabled.styl" />
+    <None Include="stylus\cssicon\icons\bookmark.styl" />
     <None Include="stylus\cssicon\icons\info.styl" />
     <None Include="stylus\cssicon\icons\search.styl" />
     <None Include="stylus\cssicon\icons\menu.styl" />
