增加电源图标

--- a/mirrorui/mirrorui.csproj
+++ b/mirrorui/mirrorui.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Content Include="404.html" />
     <Content Include="doc\cachepagedemo1.html" />
+    <Content Include="doc\cssicon\powonff.html" />
     <Content Include="doc\cssicon\mail.html" />
     <Content Include="doc\cssicon\bookmark.html" />
     <Content Include="doc\cssicon\info.html" />
@@ -145,6 +146,7 @@
     <None Include="stylus\coms\msgbox.styl" />
     <None Include="stylus\coms\msgpanel.styl" />
     <None Include="stylus\coms\mnavmenu.styl" />
+    <None Include="stylus\cssicon\icons\powonff.styl" />
     <None Include="stylus\cssicon\icons\mail.styl" />
     <None Include="stylus\cssicon\icons\disabled.styl" />
     <None Include="stylus\cssicon\icons\bookmark.styl" />
