增加PC和手机图标

--- a/mirrorui/mirrorui.csproj
+++ b/mirrorui/mirrorui.csproj
@@ -40,6 +40,8 @@
   <ItemGroup>
     <Content Include="404.html" />
     <Content Include="doc\cachepagedemo1.html" />
+    <Content Include="doc\cssicon\phone.html" />
+    <Content Include="doc\cssicon\pc.html" />
     <Content Include="doc\cssicon\powonff.html" />
     <Content Include="doc\cssicon\mail.html" />
     <Content Include="doc\cssicon\bookmark.html" />
@@ -146,6 +148,8 @@
     <None Include="stylus\coms\msgbox.styl" />
     <None Include="stylus\coms\msgpanel.styl" />
     <None Include="stylus\coms\mnavmenu.styl" />
+    <None Include="stylus\cssicon\icons\phone.styl" />
+    <None Include="stylus\cssicon\icons\pc.styl" />
     <None Include="stylus\cssicon\icons\powonff.styl" />
     <None Include="stylus\cssicon\icons\mail.styl" />
     <None Include="stylus\cssicon\icons\disabled.styl" />
