--- a/mirrorui/mirrorui.csproj
+++ b/mirrorui/mirrorui.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Content Include="404.html" />
     <Content Include="doc\cachepagedemo1.html" />
+    <Content Include="doc\cssicon\home.html" />
     <Content Include="doc\cssicon\flag.html" />
     <Content Include="doc\cssicon\lock.html" />
     <Content Include="doc\cssicon\eye.html" />
@@ -154,6 +155,7 @@
     <None Include="stylus\coms\msgpanel.styl" />
     <None Include="stylus\coms\mnavmenu.styl" />
     <None Include="stylus\cssicon\icons\chart.styl" />
+    <None Include="stylus\cssicon\icons\home.styl" />
     <None Include="stylus\cssicon\icons\flag.styl" />
     <None Include="stylus\cssicon\icons\lock.styl" />
     <None Include="stylus\cssicon\icons\eye.styl" />
