--- a/mirrorui/mirrorui.csproj
+++ b/mirrorui/mirrorui.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Content Include="404.html" />
     <Content Include="doc\cachepagedemo1.html" />
+    <Content Include="doc\cssicon\wlan.html" />
     <Content Include="doc\cssicon\share.html" />
     <Content Include="doc\cssicon\star4.html" />
     <Content Include="doc\cssicon\font.html" />
@@ -166,6 +167,7 @@
     <None Include="stylus\coms\msgbox.styl" />
     <None Include="stylus\coms\msgpanel.styl" />
     <None Include="stylus\coms\mnavmenu.styl" />
+    <None Include="stylus\cssicon\icons\wlan.styl" />
     <None Include="stylus\cssicon\icons\share.styl" />
     <None Include="stylus\cssicon\icons\font.styl" />
     <None Include="stylus\cssicon\icons\download.styl" />
