增加信封图标

--- a/mirrorui/mirrorui.csproj
+++ b/mirrorui/mirrorui.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Content Include="404.html" />
     <Content Include="doc\cachepagedemo1.html" />
+    <Content Include="doc\cssicon\envelop.html" />
     <Content Include="doc\cssicon\wlan.html" />
     <Content Include="doc\cssicon\share.html" />
     <Content Include="doc\cssicon\star4.html" />
@@ -167,6 +168,7 @@
     <None Include="stylus\coms\msgbox.styl" />
     <None Include="stylus\coms\msgpanel.styl" />
     <None Include="stylus\coms\mnavmenu.styl" />
+    <None Include="stylus\cssicon\icons\envelop.styl" />
     <None Include="stylus\cssicon\icons\wlan.styl" />
     <None Include="stylus\cssicon\icons\share.styl" />
     <None Include="stylus\cssicon\icons\font.styl" />
