增加文档菜单组件,主页菜单修改

--- a/mirrorui/bundleconfig.json
+++ b/mirrorui/bundleconfig.json
@@ -13,6 +13,7 @@
       "js/mydate.js",
       "js/m-pagenum.js",
       "js/m-sidemenu.js",
+      "js/m-docmenu.js",
       "js/tabs.js",
       "js/m-msgshow.js",
       "js/m-mnavmenu.js",
