--- a/mirrorui/compilerconfig.json
+++ b/mirrorui/compilerconfig.json
@@ -12,5 +12,12 @@
     "minify": {
       "enabled": false
     }
+  },
+  {
+    "outputFile": "zcustom/tools.css",
+    "inputFile": "zcustom/tools.styl",
+    "minify": {
+      "enabled": false
+    }
   }
 ]
