--- a/mirrorui/mirrorui.csproj
+++ b/mirrorui/mirrorui.csproj
@@ -72,6 +72,9 @@
     <Content Include="js\tabs.js" />
     <Content Include="mirrorui.css" />
     <Content Include="mirrorui.js" />
+    <Content Include="zcustom\tools.css">
+      <DependentUpon>tools.styl</DependentUpon>
+    </Content>
     <Content Include="zcustom\webui.css">
       <DependentUpon>webui.styl</DependentUpon>
     </Content>
@@ -167,6 +170,7 @@
     <None Include="stylus\variables\mediaquery.styl" />
     <None Include="stylus\variables\cirangle.styl" />
     <None Include="stylus\variables\transition.styl" />
+    <None Include="zcustom\tools.styl" />
     <None Include="zcustom\webui.styl" />
     <None Include="readme.md" />
   </ItemGroup>
